--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuepress/client": "2.0.0-rc.0",
     "vue": "^3.3.11",
     "vuepress": "2.0.0-rc.0",
+    "vuepress-plugin-search-pro": "2.0.0-rc.5",
     "vuepress-theme-hope": "2.0.0-rc.4"
   }
 }
