--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-rc.0",
-    "vue": "^3.3.13",
+    "@vuepress/utils": "2.0.0-rc.0",
+    "vue": "^3.4.3",
     "vuepress": "2.0.0-rc.0",
-    "vuepress-plugin-search-pro": "2.0.0-rc.5",
-    "vuepress-theme-hope": "2.0.0-rc.5"
+    "vuepress-plugin-copyright2": "2.0.0-rc.10",
+    "vuepress-plugin-search-pro": "2.0.0-rc.10",
+    "vuepress-theme-hope": "2.0.0-rc.10"
   }
 }
