--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.4.3",
     "vuepress": "2.0.0-rc.0",
     "vuepress-plugin-copyright2": "2.0.0-rc.10",
+    "vuepress-plugin-feed2": "2.0.0-rc.10",
     "vuepress-plugin-search-pro": "2.0.0-rc.10",
     "vuepress-theme-hope": "2.0.0-rc.10"
   }
