--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-rc.0",
-    "@vuepress/plugin-docsearch": "^2.0.0-rc.0",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.0",
     "@vuepress/utils": "2.0.0-rc.0",
-    "vue": "^3.4.3",
+    "vue": "^3.4.14",
     "vuepress": "2.0.0-rc.0",
-    "vuepress-plugin-copyright2": "2.0.0-rc.10",
-    "vuepress-plugin-feed2": "2.0.0-rc.10",
-    "vuepress-theme-hope": "2.0.0-rc.10"
+    "vuepress-plugin-copyright2": "2.0.0-rc.11",
+    "vuepress-plugin-feed2": "2.0.0-rc.11",
+    "vuepress-theme-hope": "2.0.0-rc.11"
   }
 }
