--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "type": "module",
   "scripts": {
     "docs:build": "vuepress build src",
-    "docs:clean-dev": "vuepress dev src --clean-cache",
-    "docs:dev": "vuepress dev src",
+    "docs:clean-dev": "vuepress-vite dev src --clean-cache",
+    "docs:dev": "vuepress-vite dev src",
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-rc.0",
-    "@vuepress/plugin-docsearch": "2.0.0-rc.0",
-    "@vuepress/utils": "2.0.0-rc.0",
-    "vue": "^3.4.14",
-    "vuepress": "2.0.0-rc.0",
-    "vuepress-plugin-copyright2": "2.0.0-rc.11",
-    "vuepress-plugin-feed2": "2.0.0-rc.11",
-    "vuepress-theme-hope": "2.0.0-rc.11"
+    "@vuepress/bundler-vite": "2.0.0-rc.2",
+    "@vuepress/plugin-copyright": "2.0.0-rc.9",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.7",
+    "@vuepress/plugin-feed": "2.0.0-rc.9",
+    "@vuepress/plugin-redirect": "2.0.0-rc.9",
+    "@vuepress/utils": "2.0.0-rc.2",
+    "vue": "^3.4.15",
+    "vuepress": "2.0.0-rc.2",
+    "vuepress-theme-hope": "2.0.0-rc.20"
   }
 }
