--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@vuepress/plugin-copyright": "2.0.0-rc.18",
     "@vuepress/plugin-docsearch": "2.0.0-rc.18",
     "@vuepress/plugin-feed": "2.0.0-rc.18",
+    "@vuepress/plugin-google-analytics": "2.0.0-rc.15",
     "@vuepress/plugin-redirect": "2.0.0-rc.18",
     "@vuepress/utils": "2.0.0-rc.8",
     "vue": "^3.4.21",
     "vuepress": "2.0.0-rc.8",
-    "vuepress-theme-hope": "2.0.0-rc.27"
+    "vuepress-theme-hope": "2.0.0-rc.29"
   }
 }
