--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.8",
+    "@vuepress/plugin-comment": "2.0.0-rc.20",
     "@vuepress/plugin-copyright": "2.0.0-rc.18",
     "@vuepress/plugin-docsearch": "2.0.0-rc.18",
     "@vuepress/plugin-feed": "2.0.0-rc.18",
