--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.8",
-    "@vuepress/plugin-comment": "2.0.0-rc.20",
-    "@vuepress/plugin-copyright": "2.0.0-rc.18",
-    "@vuepress/plugin-docsearch": "2.0.0-rc.18",
-    "@vuepress/plugin-feed": "2.0.0-rc.18",
+    "@vuepress/plugin-copyright": "2.0.0-rc.19",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.19",
+    "@vuepress/plugin-feed": "2.0.0-rc.19",
     "@vuepress/plugin-google-analytics": "2.0.0-rc.15",
-    "@vuepress/plugin-redirect": "2.0.0-rc.18",
+    "@vuepress/plugin-redirect": "2.0.0-rc.19",
     "@vuepress/utils": "2.0.0-rc.8",
     "vue": "^3.4.21",
     "vuepress": "2.0.0-rc.8",
-    "vuepress-theme-hope": "2.0.0-rc.29"
+    "vuepress-plugin-comment2": "2.0.0-rc.30",
+    "vuepress-theme-hope": "2.0.0-rc.31"
   }
 }
