--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docs:build": "vuepress-vite build src",
     "docs:clean-dev": "vuepress-vite dev src --clean-cache",
     "docs:dev": "vuepress-vite dev src",
+    "docs:dedupe": "pnpm dedupe",
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
