--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuepress/plugin-feed": "2.0.0-rc.21",
     "@vuepress/plugin-google-analytics": "2.0.0-rc.21",
     "@vuepress/plugin-redirect": "2.0.0-rc.21",
+    "mermaid": "^11.4.1",
     "vue": "^3.4.21",
     "vuepress": "2.0.0-rc.9",
     "vuepress-plugin-comment2": "2.0.0-rc.30",
