--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "vuepress": "2.0.0-rc.9",
     "vuepress-plugin-comment2": "2.0.0-rc.30",
     "vuepress-theme-hope": "2.0.0-rc.32"
-  }
+  },
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
